force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/tc9_pr__Payee_Leave_Rule__c.object-meta.xml
<CustomObject>
    <label>Payee Leave Rule</label>
    <nameField>
        <displayFormat>PLR-{0000000000}</displayFormat>
        <label>Payee Leave Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Leave Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>