force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Anniversary_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Treatment__c</fullName>
    <inlineHelpText>Indicates whether the payee leave balance will continue to accrue or reset</inlineHelpText>
    <label>Anniversary Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
            </value>
            <value>
                <fullName>Reset Balance</fullName>
            </value>
            <value>
                <fullName>Reset - Hire Date</fullName>
            </value>
            <value>
                <fullName>Reset - Calendar Year</fullName>
            </value>
            <value>
                <fullName>Reset - Initial leave date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>