force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Available_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Portal__c</fullName>
    <formula>if(ispickval(tc9_pr__Leave_Rule__r.tc9_pr__Available_in_Portal__c,&quot;No&quot;),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available in Portal</label>
    <type>Checkbox</type>
</CustomField>