force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/FMLA_STD__c.field-meta.xml
<CustomField>
    <fullName>FMLA_STD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMLA/STD?</label>
    <type>Checkbox</type>
</CustomField>