force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Formula_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Formula_Current_Balance__c</fullName>
    <formula>IF(TEXT(tc9_pr__Leave_Rule__r.tc9_pr__Display_Leave_Balance_As__c)=&quot;&quot;,&quot;&quot;,
TEXT(round(tc9_pr__Current_Balance__c,2)) + &quot; &quot; +  TEXT(tc9_pr__Leave_Rule__r.tc9_pr__Display_Leave_Balance_As__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Current Balance</label>
    <type>Text</type>
</CustomField>