force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Is_Leave_Reset_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Leave_Reset_Day__c</fullName>
    <formula>IF(
  ISPICKVAL( Anniversary_Treatment__c , &quot;Reset - Hire Date&quot;),
  AND(
    NOT(ISBLANK(tc9_pr__Payee__r.tc9_pr__Payroll_Start_Date__c)),
    DAY(TODAY()) = DAY(tc9_pr__Payee__r.tc9_pr__Payroll_Start_Date__c),
    MONTH(TODAY()) = MONTH(tc9_pr__Payee__r.tc9_pr__Payroll_Start_Date__c)
  ),
  IF(
    ISPICKVAL( Anniversary_Treatment__c , &quot;Reset - Calendar Year&quot;),
    AND(
      DAY(TODAY()) = 1,
      MONTH(TODAY()) = 1
    ),
    FALSE
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically becomes true based on the reset rule defined in the linked Leave Rule:

If the Anniversary Treatment is &quot;Reset - hire date&quot;, the checkbox is true only on the employee&apos;s work anniversary (same day and month as their hire date).
If the Anniversary Treatment is &quot;Reset - calendar year&quot;, the checkbox is true only on January 1st each year.
On all other dates, the checkbox remains false.</inlineHelpText>
    <label>Is Leave Reset Day?</label>
    <type>Checkbox</type>
</CustomField>