force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Last_Leave_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Leave_Adjustment_Date__c</fullName>
    <inlineHelpText>Timestamp of last leave balance carryover</inlineHelpText>
    <label>Last Leave Adjustment Date</label>
    <type>DateTime</type>
</CustomField>