force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_Balance__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Accrual_Cap__c)),
    Accrual_Cap__c &gt; 0
  ),
  IF(tc9_pr__Current_Balance__c &gt; Accrual_Cap__c, Accrual_Cap__c, tc9_pr__Current_Balance__c),
  tc9_pr__Current_Balance__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to display the capped leave balance on the employee portal</inlineHelpText>
    <label>Leave Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>