force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Leave_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Rule_Name__c</fullName>
    <formula>tc9_pr__Leave_Rule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Rule Name</label>
    <type>Text</type>
</CustomField>