force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Reinstate_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Reinstate_Leave_Balance__c</fullName>
    <formula>tc9_pr__Leave_Rule__r.Rehire_Reinstatement_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked when &apos;Rehire Reinstatement Required?&apos; is checked on leave rule</inlineHelpText>
    <label>Reinstate Leave Balance</label>
    <type>Checkbox</type>
</CustomField>