force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/Submitted_Leave__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Leave__c</fullName>
    <label>Submitted Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>