force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Assignment if the Payee Leave Rule is to be applied to a specific assignment</description>
    <inlineHelpText>A lookup to the related Assignment if the Payee Leave Rule is to be applied to a specific assignment</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Payee Leave Rules</relationshipLabel>
    <relationshipName>Payee_Leave_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>