force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Average_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Average_Pay_Rate__c</fullName>
    <description>The average pay rate which will be used if the parent Leave Rule is configured to make payment using an average pay rate.</description>
    <inlineHelpText>The average pay rate which will be used if the parent Leave Rule is configured to make payment using an average pay rate.</inlineHelpText>
    <label>Average Pay Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>