force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Balance_Last_Transferred_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Balance_Last_Transferred_On__c</fullName>
    <description>The date a balance transfer was last processed on this Payee Leave Rule</description>
    <inlineHelpText>The date a balance transfer was last processed on this Payee Leave Rule</inlineHelpText>
    <label>Balance Last Transferred On</label>
    <type>Date</type>
</CustomField>