force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Balance_Last_Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Balance_Last_Transferred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payee Leave Rule a balance was last transferred to</description>
    <inlineHelpText>Payee Leave Rule a balance was last transferred to</inlineHelpText>
    <label>Balance Last Transferred To</label>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Payee Leave Rules</relationshipLabel>
    <relationshipName>Payee_Leave_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>