force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default is null. Updated to the last Calendar Period of the Payee Pay Batch Record during calculations so that it is not calculated for the same period over and over again.</description>
    <inlineHelpText>Default is null. Updated to the last Calendar Period of the Payee Pay Batch Record during calculations so that it is not calculated for the same period over and over again.</inlineHelpText>
    <label>Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Leave Rules</relationshipLabel>
    <relationshipName>Payee_Leave_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>