force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Calendar_Period_Prior__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period_Prior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated to the Payee Leave Rule Calendar Period so that the preview period is stamped.</description>
    <inlineHelpText>Updated to the Payee Leave Rule Calendar Period so that the preview period is stamped.</inlineHelpText>
    <label>Calendar Period Prior</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Leave Rules (Calendar Period Prior)</relationshipLabel>
    <relationshipName>Payee_Leave_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>