force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Conversion_Average_Hours_per_Day__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Conversion_Average_Hours_per_Day__c</fullName>
    <description>Average number of hours per day used to convert payee leave events and payee aggregate values from hours to days</description>
    <inlineHelpText>Average number of hours per day used to convert payee leave events and payee aggregate values from hours to days</inlineHelpText>
    <label>Conversion Average Hours per Day</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>