force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Current_Balance__c</fullName>
    <description>The most recently calculated balance for this payee leave rule</description>
    <inlineHelpText>The most recently calculated balance for this payee leave rule</inlineHelpText>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>