force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Current_Balance_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Current_Balance_Last_Modified__c</fullName>
    <description>The date and time that the current balance was updated on this payee leave rule</description>
    <inlineHelpText>The date and time that the current balance was updated on this payee leave rule</inlineHelpText>
    <label>Current Balance Last Modified</label>
    <type>DateTime</type>
</CustomField>