force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The earliest date the Payee Leave Rule can be applied to a Payee Pay Batch record</description>
    <inlineHelpText>The earliest date the Payee Leave Rule can be applied to a Payee Pay Batch record</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>