force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Employee</description>
    <inlineHelpText>A lookup to the related Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee Leave Rules</relationshipLabel>
    <relationshipName>Payee_Leave_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>