force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Has_Suspension_Records__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Has_Suspension_Records__c</fullName>
    <description>Indicates whether the Payee Leave Rule has related Suspension records.</description>
    <inlineHelpText>Indicates whether the Payee Leave Rule has related Suspension records.</inlineHelpText>
    <label>Has Suspension Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>