force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Leave_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the source Leave Template is one was defined</description>
    <inlineHelpText>A lookup to the source Leave Template is one was defined</inlineHelpText>
    <label>Leave Template</label>
    <referenceTo>tc9_pr__Leave_Template__c</referenceTo>
    <relationshipLabel>Payee Leave Rules</relationshipLabel>
    <relationshipName>Payee_Leave_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>