force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Type__c</fullName>
    <description>The related Leave Rule record type</description>
    <formula>tc9_pr__Leave_Rule__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Leave Rule record type</inlineHelpText>
    <label>Leave Type</label>
    <type>Text</type>
</CustomField>