force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Minimum_Allowable_Balance__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Minimum_Allowable_Balance__c</fullName>
    <description>Where override is permitted at the Leave Rule record this is the payee-sepcific minimum allowable balance for this leave rule</description>
    <inlineHelpText>Where override is permitted at the Leave Rule record this is the payee-sepcific minimum allowable balance for this leave rule</inlineHelpText>
    <label>Minimum Allowable Balance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>