force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Original_Leave_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Original_Leave_Service_Date__c</fullName>
    <description>The original date from which this leave type should accrue.  Determines length of service for the purpose of accruing and displaying balances.</description>
    <inlineHelpText>The original date from which this leave type should accrue.  Determines length of service for the purpose of accruing and displaying balances.</inlineHelpText>
    <label>Original Leave Service Date</label>
    <type>Date</type>
</CustomField>