force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Override_Average_Pay_rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Average_Pay_rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the product will not calculate the average pay rate and the entered value will be used.</description>
    <inlineHelpText>Indicates that the product will not calculate the average pay rate and the entered value will be used.</inlineHelpText>
    <label>Override Average Pay rate</label>
    <type>Checkbox</type>
</CustomField>