force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Pay_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Loading__c</fullName>
    <description>Indicates whether loading will be paid when a payee leave event is calculated for this payee leave rule</description>
    <inlineHelpText>Indicates whether loading will be paid when a payee leave event is calculated for this payee leave rule</inlineHelpText>
    <label>Pay Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>