force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Processing_Status__c</fullName>
    <description>The payrun processing status of the Pay Batch Event record</description>
    <inlineHelpText>The payrun processing status of the Pay Batch Event record</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Part Processed</fullName>
            </value>
            <value>
                <fullName>Fully Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>