force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/fields/tc9_pr__Skip_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Skip_Manager_Approval__c</fullName>
    <description>Indicates that Payee Leave Events related to this payee leave rule will not be directed to a manager for approval</description>
    <inlineHelpText>Indicates that Payee Leave Events related to this payee leave rule will not be directed to a manager for approval</inlineHelpText>
    <label>Skip Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>