force-app/main/default/objects/tc9_pr__Payee_Leave_Rule__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Leave_Rule__c</columns>
    <columns>tc9_pr__Leave_Template__c</columns>
    <columns>tc9_pr__Leave_Type__c</columns>
    <columns>tc9_pr__Processing_Status__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>tc9_pr__Calendar_Period__c</columns>
    <columns>tc9_pr__Calendar_Period_Prior__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>